@@ -1,3 +1,7 @@
+[15 October 2007]
+
+* Make find_tagged_with correctly apply :conditions
+
 [11 October 2007]
 
 * Make tag_counts work correctly with STI.
